--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ django-cors-headers==4.6.0
 django-filter==24.3
 django-phonenumber-field==8.0.0
 django-rest-swagger==2.2.0
+django-unfold==0.43.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.8
